--- a/app/src/main/res/layout/activity_finish_purchase.xml
+++ b/app/src/main/res/layout/activity_finish_purchase.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
-        android:fontFamily="@font/poppins_regular"
+        android:fontFamily="@font/poppins_semibold"
         android:text="Datos del Negocio"
         android:textAlignment="center"
         android:textColor="@color/black"
@@ -31,7 +31,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingBottom="100dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -47,7 +48,6 @@
                     android:orientation="vertical">
 
 
-
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
@@ -61,9 +61,9 @@
 
                             <TextView
                                 android:id="@+id/fechaLbl"
-                                android:layout_width="wrap_content"
+                                android:layout_width="75dp"
                                 android:layout_height="wrap_content"
-                                android:fontFamily="@font/poppins_regular"
+                                android:fontFamily="@font/avenirnextregular"
                                 android:text="Fecha:"
                                 android:textAlignment="viewStart"
                                 android:textColor="@color/darkGray"
@@ -74,7 +74,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="20dp"
-                                android:fontFamily="@font/poppins_regular"
+                                android:fontFamily="@font/avenirnextmedium"
                                 android:text="   "
                                 android:textAlignment="viewStart"
                                 android:textColor="@color/darkGray"
@@ -90,16 +90,15 @@
                         android:orientation="horizontal">
 
                         <LinearLayout
-                            android:layout_width="wrap_content"
+                            android:layout_width="190dp"
                             android:layout_height="wrap_content"
                             android:orientation="horizontal">
 
                             <TextView
                                 android:id="@+id/diaLbl"
-                                android:layout_width="wrap_content"
+                                android:layout_width="75dp"
                                 android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:fontFamily="@font/poppins_regular"
+                                android:fontFamily="@font/avenirnextregular"
                                 android:text="Dia"
                                 android:textAlignment="viewStart"
                                 android:textColor="@color/darkGray"
@@ -110,7 +109,8 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="20dp"
-                                android:fontFamily="@font/poppins_regular"
+                                android:fontFamily="@font/avenirnextmedium"
+                                android:text=" "
                                 android:textAlignment="viewStart"
                                 android:textColor="@color/darkGray"
                                 android:textSize="14sp" />
@@ -127,7 +127,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="20dp"
                                 android:layout_weight="1"
-                                android:fontFamily="@font/poppins_regular"
+                                android:fontFamily="@font/avenirnextregular"
                                 android:text="Semana"
                                 android:textAlignment="viewStart"
                                 android:textColor="@color/darkGray"
@@ -138,7 +138,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="20dp"
-                                android:fontFamily="@font/poppins_regular"
+                                android:fontFamily="@font/avenirnextmedium"
                                 android:textAlignment="viewStart"
                                 android:textColor="@color/darkGray"
                                 android:textSize="14sp" />
@@ -154,12 +154,12 @@
 
                         <TextView
                             android:id="@+id/textView5"
-                            android:layout_width="wrap_content"
+                            android:layout_width="75dp"
                             android:layout_height="wrap_content"
-                            android:fontFamily="@font/poppins_regular"
+                            android:fontFamily="@font/avenirnextregular"
                             android:text="Tipo:"
                             android:textAlignment="viewStart"
-                            android:textColor="@color/black"
+                            android:textColor="@color/darkGray"
                             android:textSize="14sp" />
 
                         <TextView
@@ -167,11 +167,11 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="20dp"
-                            android:fontFamily="@font/poppins_regular"
+                            android:fontFamily="@font/avenirnextmedium"
                             android:text="   "
                             android:textAlignment="viewStart"
                             android:textColor="@color/darkGray"
-                            android:textSize="14sp" />
+                            android:textSize="16sp" />
                     </LinearLayout>
 
                     <LinearLayout
@@ -182,12 +182,12 @@
 
                         <TextView
                             android:id="@+id/textView5"
-                            android:layout_width="wrap_content"
+                            android:layout_width="75dp"
                             android:layout_height="wrap_content"
-                            android:fontFamily="@font/poppins_regular"
+                            android:fontFamily="@font/avenirnextregular"
                             android:text="Negocio:"
                             android:textAlignment="viewStart"
-                            android:textColor="@color/black"
+                            android:textColor="@color/darkGray"
                             android:textSize="14sp" />
 
                         <TextView
@@ -195,7 +195,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="20dp"
-                            android:fontFamily="@font/poppins_regular"
+                            android:fontFamily="@font/avenirnextmedium"
                             android:text="   "
                             android:textAlignment="viewStart"
                             android:textColor="@color/darkGray"
@@ -210,20 +210,76 @@
 
                         <TextView
                             android:id="@+id/textView5"
-                            android:layout_width="wrap_content"
+                            android:layout_width="75dp"
                             android:layout_height="wrap_content"
-                            android:fontFamily="@font/poppins_regular"
-                            android:text="Lugar:"
+                            android:fontFamily="@font/avenirnextregular"
+                            android:text="Estado:"
                             android:textAlignment="viewStart"
-                            android:textColor="@color/black"
+                            android:textColor="@color/darkGray"
                             android:textSize="14sp" />
 
                         <TextView
-                            android:id="@+id/lugar"
+                            android:id="@+id/estado"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="20dp"
-                            android:fontFamily="@font/poppins_regular"
+                            android:fontFamily="@font/avenirnextmedium"
+                            android:text="   "
+                            android:textAlignment="viewStart"
+                            android:textColor="@color/darkGray"
+                            android:textSize="14sp" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginBottom="5dp"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/textView5"
+                            android:layout_width="75dp"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/avenirnextregular"
+                            android:text="Municipio:"
+                            android:textAlignment="viewStart"
+                            android:textColor="@color/darkGray"
+                            android:textSize="14sp" />
+
+                        <TextView
+                            android:id="@+id/municipio"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="20dp"
+                            android:fontFamily="@font/avenirnextmedium"
+                            android:text="   "
+                            android:textAlignment="viewStart"
+                            android:textColor="@color/darkGray"
+                            android:textSize="14sp" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginBottom="5dp"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/textView5"
+                            android:layout_width="75dp"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/avenirnextregular"
+                            android:text="Barrio:"
+                            android:textAlignment="viewStart"
+                            android:textColor="@color/darkGray"
+                            android:textSize="14sp" />
+
+                        <TextView
+                            android:id="@+id/barrio"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="20dp"
+                            android:fontFamily="@font/avenirnextmedium"
                             android:text="   "
                             android:textAlignment="viewStart"
                             android:textColor="@color/darkGray"
@@ -234,34 +290,35 @@
                         android:id="@+id/editarCompra"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="5dp"
-                        android:layout_marginEnd="5dp"
+                        android:layout_marginTop="5dp"
                         android:layout_weight="1"
                         android:background="@drawable/semiround_gold_solid"
                         android:fontFamily="@font/poppins_bold"
                         android:padding="0dp"
-                        android:text="Editar Datos del Negocio"
+                        android:text="Editar datos del Negocio"
                         android:textColor="@android:color/white"
                         android:textSize="12sp" />
 
-                    <TextView
-                        android:id="@+id/textView8"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
-                        android:fontFamily="@font/poppins_regular"
-                        android:text="Revision de Compra"
-                        android:textAlignment="viewStart"
-                        android:textColor="@color/black"
-                        android:textSize="30sp" />
 
                 </LinearLayout>
+
+                <TextView
+                    android:id="@+id/textView8"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:fontFamily="@font/poppins_semibold"
+                    android:text="Revision de Compra"
+                    android:textAlignment="viewStart"
+                    android:textColor="@color/black"
+                    android:textSize="20sp" />
 
                 <TextView
                     android:id="@+id/textView4"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/poppins_semibold"
+                    android:layout_marginTop="-5dp"
+                    android:fontFamily="@font/avenirnextregular"
                     android:text="Listado Productos"
                     android:textAlignment="viewStart"
                     android:textColor="@color/black"
@@ -284,8 +341,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="5dp"
         android:layout_marginBottom="10dp"
         android:orientation="horizontal">
 
@@ -344,5 +401,6 @@
         android:layout_alignParentEnd="true"
         android:layout_marginTop="20dp"
         android:layout_marginRight="10dp"
+        android:tint="@color/darkGray"
         app:srcCompat="@drawable/logout" />
 </RelativeLayout>
