--- a/app/src/main/res/layout/activity_new_purchase.xml
+++ b/app/src/main/res/layout/activity_new_purchase.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
-        android:fontFamily="@font/poppins_regular"
+        android:fontFamily="@font/poppins_semibold"
         android:text="Datos del Hogar"
         android:textAlignment="center"
         android:textColor="@color/black"
@@ -54,9 +54,9 @@
 
                         <TextView
                             android:id="@+id/textView5"
-                            android:layout_width="wrap_content"
+                            android:layout_width="80dp"
                             android:layout_height="wrap_content"
-                            android:fontFamily="@font/poppins_regular"
+                            android:fontFamily="@font/avenirnextregular"
                             android:text="IdHogar:"
                             android:textAlignment="viewStart"
                             android:textColor="@color/darkGray"
@@ -67,7 +67,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="20dp"
-                            android:fontFamily="@font/poppins_regular"
+                            android:fontFamily="@font/avenirnextmedium"
                             android:text="   "
                             android:textAlignment="viewStart"
                             android:textColor="@color/darkGray"
@@ -82,9 +82,9 @@
 
                         <TextView
                             android:id="@+id/textView5"
-                            android:layout_width="wrap_content"
+                            android:layout_width="80dp"
                             android:layout_height="wrap_content"
-                            android:fontFamily="@font/poppins_regular"
+                            android:fontFamily="@font/avenirnextregular"
                             android:text="Grupo:"
                             android:textAlignment="viewStart"
                             android:textColor="@color/darkGray"
@@ -95,7 +95,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="20dp"
-                            android:fontFamily="@font/poppins_regular"
+                            android:fontFamily="@font/avenirnextmedium"
                             android:text="   "
                             android:textAlignment="viewStart"
                             android:textColor="@color/darkGray"
@@ -110,9 +110,9 @@
 
                         <TextView
                             android:id="@+id/textView5"
-                            android:layout_width="wrap_content"
+                            android:layout_width="80dp"
                             android:layout_height="wrap_content"
-                            android:fontFamily="@font/poppins_regular"
+                            android:fontFamily="@font/avenirnextregular"
                             android:text="Estado:"
                             android:textAlignment="viewStart"
                             android:textColor="@color/darkGray"
@@ -123,7 +123,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="20dp"
-                            android:fontFamily="@font/poppins_regular"
+                            android:fontFamily="@font/avenirnextmedium"
                             android:text="   "
                             android:textAlignment="viewStart"
                             android:textColor="@color/darkGray"
@@ -138,9 +138,9 @@
 
                         <TextView
                             android:id="@+id/textView5"
-                            android:layout_width="wrap_content"
+                            android:layout_width="80dp"
                             android:layout_height="wrap_content"
-                            android:fontFamily="@font/poppins_regular"
+                            android:fontFamily="@font/avenirnextregular"
                             android:text="Municipio:"
                             android:textAlignment="viewStart"
                             android:textColor="@color/darkGray"
@@ -151,7 +151,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="20dp"
-                            android:fontFamily="@font/poppins_regular"
+                            android:fontFamily="@font/avenirnextmedium"
                             android:text="   "
                             android:textAlignment="viewStart"
                             android:textColor="@color/darkGray"
@@ -166,9 +166,9 @@
 
                         <TextView
                             android:id="@+id/textView5"
-                            android:layout_width="wrap_content"
+                            android:layout_width="80dp"
                             android:layout_height="wrap_content"
-                            android:fontFamily="@font/poppins_regular"
+                            android:fontFamily="@font/avenirnextregular"
                             android:text="Parroquia:"
                             android:textAlignment="viewStart"
                             android:textColor="@color/darkGray"
@@ -179,7 +179,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="20dp"
-                            android:fontFamily="@font/poppins_regular"
+                            android:fontFamily="@font/avenirnextmedium"
                             android:text="   "
                             android:textAlignment="viewStart"
                             android:textColor="@color/darkGray"
@@ -192,17 +192,17 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
-                    android:fontFamily="@font/poppins_regular"
+                    android:fontFamily="@font/poppins_semibold"
                     android:text="Compra/Nueva Compra"
                     android:textAlignment="viewStart"
                     android:textColor="@color/black"
-                    android:textSize="24sp" />
+                    android:textSize="20sp" />
 
                 <TextView
                     android:id="@+id/textView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/poppins_regular"
+                    android:fontFamily="@font/avenirnextregular"
                     android:text="Por favor ingrese los datos del negocio"
                     android:textAlignment="viewStart"
                     android:textColor="@color/darkGray"
@@ -240,7 +240,7 @@
                             android:layout_height="match_parent"
                             android:background="@null"
                             android:ems="10"
-                            android:fontFamily="@font/poppins_regular"
+                            android:fontFamily="@font/avenirnextregular"
                             android:hint="Fecha de Compra"
                             android:inputType="textPersonName"
 
@@ -352,8 +352,8 @@
                             android:layout_height="match_parent"
                             android:background="@null"
                             android:ems="10"
-                            android:fontFamily="@font/poppins_regular"
-                            android:hint="Nombre del Negocio"
+                            android:fontFamily="@font/avenirnextregular"
+                            android:hint="Barrio"
                             android:inputType="none|textCapCharacters"
 
                             android:textSize="14sp" />
@@ -430,7 +430,7 @@
                             android:layout_height="match_parent"
                             android:background="@null"
                             android:ems="10"
-                            android:fontFamily="@font/poppins_regular"
+                            android:fontFamily="@font/avenirnextregular"
                             android:hint="Nombre del Negocio"
                             android:inputType="none|textCapCharacters"
 
@@ -447,6 +447,7 @@
                     android:layout_marginTop="10dp"
                     android:background="@drawable/semiround_white_solid"
                     android:padding="4dp"
+                    android:visibility="gone"
                     app:shadow_cast_only_background="true"
                     app:shadow_color="#808"
                     app:shadow_downscale="1"
@@ -454,8 +455,8 @@
                     app:shadow_with_color="true"
                     app:shadow_with_content="true"
                     app:shadow_with_css_scale="true"
-                    app:shadow_with_dpi_scale="true"
 
+                    app:shadow_with_dpi_scale="true"
                     app:shadow_x_shift="0dp"
                     app:shadow_y_shift="4dp">
 
@@ -472,7 +473,7 @@
                             android:layout_height="match_parent"
                             android:background="@null"
                             android:ems="10"
-                            android:fontFamily="@font/poppins_regular"
+                            android:fontFamily="@font/avenirnextregular"
                             android:hint="Lugar"
                             android:inputType="none|textCapCharacters"
 
@@ -486,8 +487,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
-                    android:background="@drawable/semiround_yellow_solid"
-                    android:fontFamily="@font/poppins_bold"
+                    android:background="@drawable/semiround_gold_solid"
+                    android:fontFamily="@font/avenirnextbold"
                     android:text="INTRODUCIR PRODUCTOS"
                     android:textColor="@android:color/white"
                     android:textSize="14sp" />
@@ -542,7 +543,7 @@
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/poppins_regular"
+            android:fontFamily="@font/avenirnextregular"
             android:text="Tiene alguna duda?"
             android:textAlignment="viewStart"
             android:textColor="@color/black"
@@ -554,7 +555,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
             android:background="@android:color/transparent"
-            android:fontFamily="@font/poppins_bold"
+            android:fontFamily="@font/avenirnextbold"
             android:text="Contacto"
             android:textAllCaps="false"
             android:textColor="@color/main_color"
@@ -568,5 +569,6 @@
         android:layout_alignParentEnd="true"
         android:layout_marginTop="20dp"
         android:layout_marginRight="10dp"
+        android:tint="@color/darkGray"
         app:srcCompat="@drawable/logout" />
 </RelativeLayout>
