--- a/app/src/main/res/layout/activity_finish_purchase.xml
+++ b/app/src/main/res/layout/activity_finish_purchase.xml
@@ -61,7 +61,7 @@
 
                             <TextView
                                 android:id="@+id/fechaLbl"
-                                android:layout_width="75dp"
+                                android:layout_width="130dp"
                                 android:layout_height="wrap_content"
                                 android:fontFamily="@font/avenirnextregular"
                                 android:text="Fecha:"
@@ -96,7 +96,7 @@
 
                             <TextView
                                 android:id="@+id/diaLbl"
-                                android:layout_width="75dp"
+                                android:layout_width="130dp"
                                 android:layout_height="wrap_content"
                                 android:fontFamily="@font/avenirnextregular"
                                 android:text="Dia"
@@ -154,7 +154,7 @@
 
                         <TextView
                             android:id="@+id/textView5"
-                            android:layout_width="75dp"
+                            android:layout_width="130dp"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/avenirnextregular"
                             android:text="Tipo:"
@@ -182,7 +182,7 @@
 
                         <TextView
                             android:id="@+id/textView5"
-                            android:layout_width="75dp"
+                            android:layout_width="130dp"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/avenirnextregular"
                             android:text="Negocio:"
@@ -210,7 +210,7 @@
 
                         <TextView
                             android:id="@+id/textView5"
-                            android:layout_width="75dp"
+                            android:layout_width="130dp"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/avenirnextregular"
                             android:text="Estado:"
@@ -238,7 +238,7 @@
 
                         <TextView
                             android:id="@+id/textView5"
-                            android:layout_width="75dp"
+                            android:layout_width="130dp"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/avenirnextregular"
                             android:text="Municipio:"
@@ -266,10 +266,10 @@
 
                         <TextView
                             android:id="@+id/textView5"
-                            android:layout_width="75dp"
+                            android:layout_width="130dp"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/avenirnextregular"
-                            android:text="Barrio:"
+                            android:text="Barrio/ Urb./ Zona:"
                             android:textAlignment="viewStart"
                             android:textColor="@color/darkGray"
                             android:textSize="14sp" />
