--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -187,6 +187,17 @@
                     android:layout_marginTop="10dp"
                     android:src="@drawable/logo_skill" />
 
+                <TextView
+                    android:id="@+id/version"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:fontFamily="@font/avenirnextregular"
+                    android:text="No posee cuenta?"
+                    android:textAlignment="center"
+                    android:textColor="@color/black"
+                    android:textSize="14sp" />
+
 
             </LinearLayout>
         </LinearLayout>
