--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,9 @@
     <color name="secondary_color">#F8C300</color>
 
 
+    <color name="blue">#2F75B6</color>
+    <color name="green">#548235</color>
+
+
+
 </resources>
