--- a/app/src/main/res/layout/activity_finish_purchase.xml
+++ b/app/src/main/res/layout/activity_finish_purchase.xml
@@ -73,7 +73,7 @@
                                 android:id="@+id/fecha"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_marginStart="20dp"
+                                android:layout_marginStart="5dp"
                                 android:fontFamily="@font/avenirnextmedium"
                                 android:text="   "
                                 android:textAlignment="viewStart"
@@ -92,6 +92,7 @@
                         <LinearLayout
                             android:layout_width="190dp"
                             android:layout_height="wrap_content"
+                            android:layout_weight="1"
                             android:orientation="horizontal">
 
                             <TextView
@@ -106,11 +107,10 @@
 
                             <TextView
                                 android:id="@+id/dia"
-                                android:layout_width="wrap_content"
+                                android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:layout_marginStart="20dp"
+                                android:layout_marginStart="5dp"
                                 android:fontFamily="@font/avenirnextmedium"
-                                android:text=" "
                                 android:textAlignment="viewStart"
                                 android:textColor="@color/darkGray"
                                 android:textSize="14sp" />
@@ -119,6 +119,7 @@
                         <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_weight="1"
                             android:orientation="horizontal">
 
                             <TextView
@@ -166,7 +167,7 @@
                             android:id="@+id/tipoNegocio"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="20dp"
+                            android:layout_marginStart="5dp"
                             android:fontFamily="@font/avenirnextmedium"
                             android:text="   "
                             android:textAlignment="viewStart"
@@ -194,7 +195,7 @@
                             android:id="@+id/nombre"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="20dp"
+                            android:layout_marginStart="5dp"
                             android:fontFamily="@font/avenirnextmedium"
                             android:text="   "
                             android:textAlignment="viewStart"
@@ -222,7 +223,7 @@
                             android:id="@+id/estado"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="20dp"
+                            android:layout_marginStart="5dp"
                             android:fontFamily="@font/avenirnextmedium"
                             android:text="   "
                             android:textAlignment="viewStart"
@@ -250,7 +251,7 @@
                             android:id="@+id/municipio"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="20dp"
+                            android:layout_marginStart="5dp"
                             android:fontFamily="@font/avenirnextmedium"
                             android:text="   "
                             android:textAlignment="viewStart"
@@ -278,7 +279,7 @@
                             android:id="@+id/barrio"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="20dp"
+                            android:layout_marginStart="5dp"
                             android:fontFamily="@font/avenirnextmedium"
                             android:text="   "
                             android:textAlignment="viewStart"
